[tool.poetry]
name = "trip-planner"
version = "0.1.0"
description = ""
authors = ["Tamir Bahar"]
license = "MIT"
readme = "README.md"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.261"
black = "^23.3.0"
isort = "^5.12.0"
nox = "^2022.11.21"
mypy = "^1.2.0"
pytest = "^7.3.0"
pytest-cov = "^4.0.0"


[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
# Configure isort to work without access to site-packages
known_first_party = ["trip_planner", "tests"]

# Settings for Black compatibility
profile = "black"
line_length = 88


[tool.mypy]
check_untyped_defs = true
python_version = "3.11"

[tool.pytest.ini_options]
xfail_strict = true
addopts = "-ra -q --cov --cov-report=xml --cov-report=term-missing"
testpaths = [
    "tests",
]


[tool.ruff]
# Avoid automatic removal of unused variables
unfixable = ['F841'] # unused-variable


[tool.coverage]
report.skip_covered = true